# hedera-protobufs-cpp

./: CMakeLists.txt  CMakePresets.json  Library Linking Generator.xlsx  README.md  vcpkg.json
.github/workflows/: flow-pull-request-checks.yaml  zxc-build-library.yaml
src/proto/: CMakeLists.txt
